// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-gEvEer enNuUk"
>
  <span
    className="sc-iGgWBj hAqdMp"
  >
    0
  </span>
  <div
    className="sc-eqUAAy ihrUnf"
  >
    <span
      className="sc-aXZVg dRxqzn"
      color="#fff"
    />
    <p
      className="sc-dcJsrY jqSBZI"
      color="#555"
    >
      P2
    </p>
  </div>
</div>
`;

exports[`playerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-gEvEer enNuUk"
>
  <div
    className="sc-eqUAAy ihrUnf"
  >
    <span
      className="sc-aXZVg edYmzJ"
      color="#000"
    />
    <p
      className="sc-dcJsrY bjVcPP"
      color="#fff"
    >
      P1
    </p>
  </div>
  <span
    className="sc-iGgWBj hAqdMp"
  >
    0
  </span>
</div>
`;
